background overlap fix in corner bg comp

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,30 @@ a {
   color: #0066cc;
   text-decoration: none;
 }
+/*customize scroll bar*/
+::-webkit-scrollbar {
+  width: 8px;
+  margin: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: #e0e0e0;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #2f7eb9;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  cursor: pointer;
+  width: 14px;
+}
+
 .app-root {
   position: relative;
 }
@@ -453,27 +477,14 @@ span.sb-link-label.active {
   margin: 10px 0;
   padding-right: 10px;
 }
-
-/*customize scroll bar*/
-::-webkit-scrollbar {
-  width: 8px;
-  margin: 4px;
+.bg-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
-
-/* Track */
-::-webkit-scrollbar-track {
+.offer-card {
+  background-color: white;
   border-radius: 10px;
-  background: #e0e0e0;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #2f7eb9;
-  border-radius: 10px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  cursor: pointer;
-  width: 14px;
+  padding: 20px;
+  z-index: 999;
 }
